_sass/minima/_layout.scss
/**
 * Site header
 */
.site-header {
  border-top: 5px solid $grey-color-dark;
  border-bottom: 1px solid $grey-color-light;
  min-height: calc($spacing-unit * 1.865);

  // Positioning context for the mobile navigation icon
  position: relative;

  .action-bar {

  }
} 

.site-title {
  @include relative-font-size(1.625);
  font-weight: 300;
  line-height: $base-line-height * $base-font-size * 2.25;
  letter-spacing: -1px;
  margin-bottom: 0;
  float: left;

  &,
  &:visited {
    color: $grey-color-dark;
  }
}

.site-nav {
  float: right;
  line-height: $base-line-height * $base-font-size * 2.25;

  .nav-trigger {
      display: none;
  }

  .menu-icon {
    display: none;
  }

  .page-link {
    color: $text-color;
    line-height: $base-line-height;

    // Gaps between nav items, but not on the last one
    &:not(:last-child) {
      margin-right: 20px;
    }
  }

  @include media-query($on-palm) {
    position: absolute;
    top: 9px;
    right: calc($spacing-unit / 2);
    background-color: $background-color;
    border: 1px solid $grey-color-light;
    border-radius: 5px;
    text-align: right;

    label[for="nav-trigger"] {
      display: block;
      float: right;
      width: 36px;
      height: 36px;
      z-index: 2;
      cursor: pointer;
    }

    .menu-icon {
      display: block;
      float: right;
      width: 36px;
      height: 26px;
      line-height: 0;
      padding-top: 10px;
      text-align: center;

      > svg {
        fill: $grey-color-dark;
      }
    }

    input ~ .trigger {
      clear: both;
      display: none;
    }

    input:checked ~ .trigger {
      display: block;
      padding-bottom: 5px;
    }

    .page-link {
      display: block;
      padding: 5px 10px;

      &:not(:last-child) {
        margin-right: 0;
      }
      margin-left: 20px;
    }
  }
}



/**
 * Site footer
 */
.site-footer {
  border-top: 1px solid $grey-color-light;
  padding: $spacing-unit 0;
}

.footer-heading {
  @include relative-font-size(1.125);
  margin-bottom: calc($spacing-unit / 2);
}

.contact-list,
.social-media-list {
  list-style: none;
  margin-left: 0;
}

.footer-col-wrapper {
  @include relative-font-size(0.9375);
  color: $grey-color;
  margin-left: calc($spacing-unit / -2);
  @extend %clearfix;
}

.footer-col {
  float: left;
  margin-bottom: calc($spacing-unit / 2);
  padding-left: calc($spacing-unit / 2);
}

.footer-col-1 {
  width: -webkit-calc(35% - (#{$spacing-unit} / 2));
  width:         calc(35% - (#{$spacing-unit} / 2));
}

.footer-col-2 {
  width: -webkit-calc(20% - (#{$spacing-unit} / 2));
  width:         calc(20% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
  width: -webkit-calc(45% - (#{$spacing-unit} / 2));
  width:         calc(45% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {
  .footer-col-1,
  .footer-col-2 {
    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
    width:         calc(50% - (#{$spacing-unit} / 2));
  }

  .footer-col-3 {
    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
    width:         calc(100% - (#{$spacing-unit} / 2));
  }
}

@include media-query($on-palm) {
  .footer-col {
    float: none;
    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
    width:         calc(100% - (#{$spacing-unit} / 2));
  }
}



/**
 * Page content
 */
.page-content {
  padding: calc($spacing-unit / 2) 0;
  flex: 1 0 auto;
  padding-bottom: 0;
}

.page-heading {
  @include relative-font-size(2);
}

.post-list-heading {
  @include relative-font-size(1.75);
}

.post-list {
  margin-left: 0;
  list-style: none;

  > li {
    margin-bottom: 15px;
  }
}

.post-meta {
  font-size: $small-font-size;
  color: $grey-color;
}

.post-link {
  display: block;
  @include relative-font-size(1.5);
}

.post-title {
  @include relative-font-size(2.625);
  letter-spacing: -1px;
  line-height: 1;

  @include media-query($on-laptop) {
    @include relative-font-size(2.25);
  }
}

.post-content {
  //margin-bottom: $spacing-unit;

  h2 {
    @include relative-font-size(2);

    @include media-query($on-laptop) {
      @include relative-font-size(1.75);
    }
  }

  h3 {
    @include relative-font-size(1.625);

    @include media-query($on-laptop) {
      @include relative-font-size(1.375);
    }
  }

  h4 {
    @include relative-font-size(1.25);

    @include media-query($on-laptop) {
      @include relative-font-size(1.125);
    }
  }
}

.pagination {
  position: relative;
  top: 3px;
  color: white;
  margin: 0 5px;
  font-size: 12pt;
  font-weight: 100;
  a {
    color: white;
    text-decoration: underline;
  }
  .previous {
    float: left;
  }
}

.post-top-page {
  object-fit: cover;
  height: 320px;
  width: 100%;
  margin-bottom: 10px;

  @at-root p#{&} {
    margin-left: 0;
    margin-right: 0;
  }
}

header {
  text-align: center;
  margin-bottom: 5px;

  h1 {
    margin-bottom: 0;
  }
  p {
    margin-bottom: 15px;
  }
}


@media screen and (max-width: 800px) {

  .full-container {
    width: calc(100% + 30px);
    margin-left: -15px;
  }
}

@media screen and (max-width: 527px) {

  .preview-full-container {
    width: calc(100% + 30px) !important;
    margin-left: -15px;
  }
}


.post-preview {
  font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #111;
  background-color: #fdfdfd;
  -webkit-text-size-adjust: 100%;
  -webkit-font-feature-settings: "kern" 1;
  -moz-font-feature-settings: "kern" 1;
  -o-font-feature-settings: "kern" 1;
  font-feature-settings: "kern" 1;
  font-kerning: normal;
  /*text-align: justify;*/
  min-height: 90px;
  padding-bottom: 10px;
  position: relative;
}

.location-meta { 
  float: right;
}

.post-icon {
  float: left;
  width: 100%;
  padding-right: 15px;
  object-fit: cover;
}

.header-post {
  // margin-bottom: 0.2em;
  text-align: center;

  /** mnogotochie */
   display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  line-height: 25px;
  // margin-bottom: 10px;
  overflow: hidden;
  height: 45px;
}

.post-link {
  padding: 10px;
  color: white;
  background: #222;
}

.bottom-filler {
  width: 100%;
  position: absolute;
  height: 8px;
  bottom: 0;
  background: #222;
}

a:visited.post-link, .post-link {
  color: #fefefe;
  // text-decoration: underline;  
}



.post-preview-text {
  width: 100%;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  line-height: 20px;
  padding-top: 10px;

  min-height: 60px;
}
.post-preview-text > p {
  margin: 0 0 0 0;
  height: 50px;
}

@media screen and (max-width: 800px) {
  .post-list > li {
    width: 100%;
  }
  
}

.post-list > li {
    width: calc(50% - 7.5px);
    display: inline-block;
    float: left;
}

.post-list > li:nth-child(even) {
  padding-left: 15px;
}

.post-icon {
  // width: 50vmin;
  width: 100%;
  height: 50vmin;
}

/* change header to picture */
.header-post {
  width: 100%;
  // margin-bottom: 0;
  padding-top: 0px;
  position: absolute;
  bottom: 80px;
}

@media screen and (max-width: 527px) {

  .post-list > li {
    width: 100%;
    display: inline-block;
    
  }
  .post-list > li:nth-child(even) {
    padding-left: 0;
  }
  .post-icon {
    width: 100vmin;
    height: 100vmin;
  }
  .header-post {
    width: calc(100% + 30px);
    margin-left: -15px;
  }
}

a:hover.post-link {
  color: white;
  background: #222;
  text-decoration: none;
}

.square-box{
  position: relative;
  width: 100%;
  overflow: hidden;

  background: #222;
}
.square-box:before{
  content: "";
  display: block;
  padding-top: 100%;
}
.square-content{
  position:  absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  color: white;
  text-align: center;
  height: 100%;
}

